[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "focal_ce_loss"
version = "0.0.2"
description = "A loss function for "
authors = ["rpetras ricky@petras.us"]
readme = "src/FCE_README.md"
license = "GPLv3"
packages = [{ include = "focal_ce_loss.py", from = "src" }]
exclude = ["notebooks/**"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["Python", "data visualization", "open-source"]

[tool.poetry.dependencies]
python = ">=3.11"
torch = "*"

[tool.poetry.urls]
Homepage = "https://github.com/RPetras3/focal_ce_loss_funcs_pytorch"
Documentation = "https://github.com/RPetras3/focal_ce_loss_funcs_pytorch/README.MD"
Repository = "https://github.com/RPetras3/focal_ce_loss_funcs_pytorch"
Issues = "https://github.com/RPetras3/focal_ce_loss_funcs_pytorch/issues"
PyPI = "https://pypi.org/project/focal_ce_loss"